支持进行集合间全量数据复制

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -8,6 +8,7 @@
 | bucket_invite_log       | `bucket`邀请日志。               |
 | bucket_preset_object    | `bucket`预制数据。               |
 | tms_app_data_action_log | 记录操作日志。                   |
+| replica_map             | 记录集合复制对应关系。           |
 
 # 空间（tms_admin/bucket）
 
@@ -35,79 +36,96 @@
 | nickname | 被邀请人昵称      |
 | acceptAt | 接受邀请时间      |
 
-# 数据库（tms_admin/mongodb_object）
+# 管理对象（tms_admin/mongodb_object）
+
+## 数据库（type=database）
 
 | 字段          | 说明                                                                       | 必填 |
 | ------------- | -------------------------------------------------------------------------- | ---- |
 | \_id          | `mongodb`内部`id`                                                          | 是   |
 | type          | 等于`database`，不可修改。                                                 | 是   |
 | bucket        | 数据库所属存储空间                                                         | 否   |
-| name          | 英文名。在每个`bucket`内唯一。                                             | 是   |
 | sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 | 是   |
+| name          | 英文名。在每个`bucket`内唯一。                                             | 是   |
 | title         | 中文名                                                                     | 是   |
 | description   | 说明                                                                       | 否   |
 | top           | 是否置顶。值为`top`时置顶。                                                | 否   |
 | entensionInfo | 存放用户自定义的数据库描述信息                                             | 否   |
 
-# 集合（tms_admin/mongodb_object）
+## 集合（type=collection）
 
-| 字段        | 说明                                             | 必填 |
-| ----------- | ------------------------------------------------ | ---- |
-| \_id        | `mongodb`内部`id`                                | 是   |
-| type        | 等于`collection`，不可修改。                     | 是   |
-| bucket      | 集合所属存储空间                                 | 否   |
-| database    | 引用数据库对象的`name`字段。                     | 是   |
-| name        | 英文名。在每个`database`内唯一。                 | 是   |
-| title       | 中文名                                           | 否   |
-| description | 说明                                             | 否   |
-| schema_id   | 集合中文档对应的扩展字段定义 id。                | 否   |
-| tags        |                                                  | 否   |
-| default_tag |                                                  | 否   |
-| usage       | 集合用途，`0`或不指定为普通集合，`1`为聚合集合。 | 否   |
+| 字段        | 说明                                                         | 必填 |
+| ----------- | ------------------------------------------------------------ | ---- |
+| \_id        | `mongodb`内部`id`                                            | 是   |
+| type        | 等于`collection`，不可修改。                                 | 是   |
+| bucket      | 集合所属存储空间                                             | 否   |
+| database    | 引用数据库对象的`name`字段。                                 | 是   |
+| name        | 英文名，`mongodb`中创建的集合名称。在每个`database`内唯一。  | 是   |
+| title       | 中文名                                                       | 否   |
+| description | 说明                                                         | 否   |
+| schema_id   | 集合中文档对应的扩展字段定义 id。                            | 否   |
+| tags        |                                                              | 否   |
+| default_tag |                                                              | 否   |
+| usage       | 集合用途，`0`或**不指定**为普通集合，`1`为复制集合的从集合。 | 否   |
 
-# 文档列定义（tms_admin/mongodb_object）
+## 文档列定义（type=schema）
 
-| 字段   | 说明                                                             |
-| ------ | ---------------------------------------------------------------- |
-| \_id   | `mongodb`内部`id`                                                |
-| bucket | 扩展字段定义所属存储空间                                         |
-| title  | 中文名                                                           |
-| scope  | 适用对象类型：文档（document），数据库（db）或集合（collection） |
-| body   | `json-schema`数据                                                |
-| type   | 等于`schema`                                                     |
+| 字段   | 说明                                                             | 必填 |
+| ------ | ---------------------------------------------------------------- | ---- | --- |
+| \_id   | `mongodb`内部`id`                                                | 是   |
+| type   | 等于`schema`，不可修改。                                         | 是   |
+| bucket | 扩展字段定义所属存储空间                                         | 否   |
+| title  | 中文名                                                           | 否   |
+| scope  | 适用对象类型：文档（document），数据库（db）或集合（collection） |      | 是  |
+| body   | `json-schema`数据                                                | 否   |
+
+# 预制管理对象（tms_admin/bucket_preset_object）
 
 `bucket`默认`database`，`collection`，`schema`放在`tms_admin`库`bucket_preset_object`集合中。
 
-# 数据库（tms_admin/bucket_preset_object）
+## 数据库（type=database）
 
-| 字段          | 说明                                     |
-| ------------- | ---------------------------------------- |
-| \_id          | `mongodb`内部`id`                        |
-| name          | 引用名称（英文）。在每个`bucket`内唯一。 |
-| title         | 中文名                                   |
-| description   |                                          |
-| type          | 等于`database`                           |
-| entensionInfo | 存放用户自定义的数据库描述信息           |
+| 字段          | 说明                                     | 必填 |
+| ------------- | ---------------------------------------- | ---- |
+| \_id          | `mongodb`内部`id`                        | 是   |
+| type          | 等于`database`                           | 是   |
+| name          | 引用名称（英文）。在每个`bucket`内唯一。 | 是   |
+| title         | 中文名                                   | 否   |
+| description   |                                          | 否   |
+| entensionInfo | 存放用户自定义的数据库描述信息           | 否   |
 
-# 集合（tms_admin/bucket_preset_object）
+## 集合（type=collection）
 
-| 字段        | 说明                                     |
-| ----------- | ---------------------------------------- |
-| \_id        | `mongodb`内部`id`                        |
-| database    | 引用数据库对象的`name`字段。             |
-| name        | 引用名称（英文）。在每个`bucket`内唯一。 |
-| title       | 中文名                                   |
-| description |                                          |
-| schema_id   | 集合中文档对应的`json-schema`定义。      |
-| type        | 等于`collection`                         |
+| 字段        | 说明                                     | 必填 |
+| ----------- | ---------------------------------------- | ---- |
+| \_id        | `mongodb`内部`id`                        | 是   |
+| type        | 等于`collection`                         | 是   |
+| database    | 引用数据库对象的`name`字段。             | 是   |
+| name        | 引用名称（英文）。在每个`bucket`内唯一。 | 是   |
+| title       | 中文名                                   | 否   |
+| description |                                          | 否   |
+| schema_id   | 集合中文档对应的`json-schema`定义。      | 否   |
 
-# 扩展字段定义（tms_admin/bucket_preset_object）
+## 文档列定义（type=schema）
 
-| 字段        | 说明                                                             |
-| ----------- | ---------------------------------------------------------------- |
-| \_id        | `mongodb`内部`id`                                                |
-| title       | 中文名                                                           |
-| scope       | 适用对象类型：文档（document），数据库（db）或集合（collection） |
-| description |                                                                  |
-| body        | `json-schema`数据                                                |
-| type        | 等于`schema`                                                     |
+| 字段        | 说明                                                             | 必填 |
+| ----------- | ---------------------------------------------------------------- | ---- |
+| \_id        | `mongodb`内部`id`                                                | 是   |
+| type        | 等于`schema`                                                     | 是   |
+| title       | 中文名                                                           | 否   |
+| scope       | 适用对象类型：文档（document），数据库（db）或集合（collection） | 是   |
+| description |                                                                  | 否   |
+| body        | `json-schema`数据                                                | 否   |
+
+# 集合复制对应关系（tms_admin/replica_map）
+
+| 字段           | 说明                                         | 类型     | 必填 |
+| -------------- | -------------------------------------------- | -------- | ---- |
+| \_id           | `mongodb`内部`id`                            | ObjectId | 是   |
+| primary        | 主集合，集合属性`usage!=1`。                 | object   | 是   |
+| primary.db     | 主集合数据库名称（mongodb_object.sysname）。 | string   | 是   |
+| primary.cl     | 主集合名称（mongodb_object.name）。          | string   | 是   |
+| secondary      | 从集合，集合属性`usage=1`。                  | object   | 是   |
+| secondary.clId | 从集合（mongodb_object.id）。                | ObjectId | 是   |
+| secondary.db   | 从集合数据库名称（mongodb_object.sysname）。 | string   | 是   |
+| secondary.cl   | 从集合名称（mongodb_object.name）。          | string   | 是   |
