--- a/doc/复制集合.md
+++ b/doc/复制集合.md
@@ -1,6 +1,57 @@
 # 介绍
 
-# mongodb 复制机制
+实现从集合 A（主集合） 的向集合 B（从集合） 全量和实时复制数据。一个主集合可以向多个从集合复制数据，一个从集合可以从多个主集合接收数据。
+
+实时复制数据需要使用`ChangeStream`，因此，若需要支持实时复制必须设置`Replica Set`。
+
+从集合和普通集合在使用上并没有严格的区别，也需要定义`schema`。但是，系统会在从集合上自动添加`__pri`字段用于记录对应主集合中的文档信息，其内容如下：
+
+| 内置字段     | 说明                            | 必填 | 类型      |
+| ------------ | ------------------------------- | ---- | --------- |
+| \_\_pri      |                                 | 是   | object    |
+| \_\_pri.db   | 文档所属数据库名称（sysname）。 | 是   | string    |
+| \_\_pri.clId | 文档所属集合 id。               | 是   | ObjectId  |
+| \_\_pri.cl   | 文档所属集合名称（name）。      | 是   | string    |
+| \_\_pri.id   | 文档原始 id（\_id）。           | 是   | ObjectId  |
+| \_\_pri.time | 最近一次复制时间。              | 是   | 13 位整型 |
+
+# 配置复制关系
+
+`tms_admin.replica_map`集合用于记录集合间的复制关系。
+
+自建集合对象（tms_admin.mongodb_object）中的`usage`字段用于指定集合用户，当值为`1`时，说明集合作为从集合使用。
+
+管理员用户可以创建**从集合**；管理员用户和普通用户可以查看所有**从集合**。
+
+管理员和普通用户可以建立或删除**主集合到从集合的复制关系**。
+
+管理员用户可以查看全部集合复制关系。
+
+普通用户可以查看一个集合的全部复制关系。
+
+| API             | 说明                           |
+| --------------- | ------------------------------ |
+| /replica/list   | 查看已有集合复制关系。         |
+| /replica/create | 建立主集合到从集合的复制关系。 |
+| /replica/remove | 删除主集合到从集合的复制关系。 |
+
+# 全量复制
+
+管理员用户和普通用户都可以在任意时刻进行由**主集合**到**从集合**的全量复制。进行全量复制前，必须先建立复制关系。
+
+| API                  | 说明                           |
+| -------------------- | ------------------------------ |
+| /replica/synchronize | 执行主集合到从集合的全量同步。 |
+
+支持批量执行？支持全部执行？
+
+# 实时复制
+
+必须配置了`replica set`才能支持实时复制，系统默认不打开集合实时复制功能，需要通过环境变量`TMW_REALTIME_REPLICA`打开。
+
+系统启动时监听`replica_map`，实时更新复制逻辑。
+
+## mongodb 复制集
 
 配置复制集
 
@@ -10,54 +61,35 @@ secondaries
 
 arbiter
 
-将多个集合的数据复制到同一个集合。
+## ChangeStream
 
-用于复制多个集合文档数据的集合称之为**复制集合**。
+性能问题。
 
-实现从集合 A 的向集合 B 复制数据。
+可靠性问题。
 
-A 和 B 的 schema 是否相同？
+初始化问题。
 
-是否只同步和集合 B 的 schema 一致的数据？
+# 在从集合上执行操作
 
-是否支持按照集合 A 和集合 B 的 schema 映射关系同步数据？
+所有对从集合中记录的操作，都要转换为对主集合中相应记录的操作，然后再由主集合复制到从集合。
 
-建立集合间的复制关系
+不否允许用户在从集合中直接添加文档。
 
-不通过操作日志（oplog）判断数据的一致性
+在从集合上可以执行主集合可用的插件，但是，都要转为对主集合的操作。
 
-需要在环境变量中设置是否开放复制集合功能。
+# 待优化问题
 
-TMW_REPLICA_COLLECTION
+主集合和从集合的`schema`是否要求相同？是否只同步主集合中和从集合的`schema`一致的数据？
 
-| 内置字段     | 说明                            | 必填 | 类型      |
-| ------------ | ------------------------------- | ---- | --------- |
-| \_\_src      |                                 | 是   | object    |
-| \_\_src.db   | 文档所属数据库名称（sysname）。 | 是   | string    |
-| \_\_src.coll | 文档所属集合名称（name）。      | 是   | string    |
-| \_\_src.id   | 文档原始 id（\_id）。           | 是   | ObjectId  |
-| \_\_src.time | 最近一次复制时间。              | 是   | 13 位整型 |
+是否支持按照主集合`schema`和从集合`schema`的映射关系同步数据？
 
-| API         | 说明 |     |
-| ----------- | ---- | --- |
-| synchronize |      |     |
-| watch       |      |     |
+是否可以利用`perset`机制自动建立集合复制关系？
 
-对复制集合中文档的操作都转为对原始集合中文档的操作。
+删除主集合或从集合时如何处理已有的复制关系？有复制关系时就不允许删？
 
-管理员创建用于接收文档数据的目标集合。管理员和普通用户可以都可以将指定集合的数据同步同步到目标集合。
+修改主集合或从集合的名称时如何处理已有的复制关系？复制关系上已经记录`clId`还需要记录冗余信息吗？数据名对应的是`sysname`，这个不会发生改变，不受影响；集合的名称是允许改变的，而且和 mongodb 中的名称一致。集合的名字还影响了从集合中记录的`__pri`数据。
 
-性能问题
-
-分页读取
-
-批量操作
-
-比较单条数据的方法，覆盖
-
-比较文档是否一致？直接执行 insertOrUpdate？replaceOne？
-
-参考：
+# 参考：
 
 https://docs.mongodb.com/manual/reference/operator/update/#update-operators
 
