创建的集合在系统中使用sysname

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -54,19 +54,23 @@
 
 ## 集合（type=collection）
 
-| 字段        | 说明                                                         | 必填 |
-| ----------- | ------------------------------------------------------------ | ---- |
-| \_id        | `mongodb`内部`id`                                            | 是   |
-| type        | 等于`collection`，不可修改。                                 | 是   |
-| bucket      | 集合所属存储空间                                             | 否   |
-| database    | 引用数据库对象的`name`字段。                                 | 是   |
-| name        | 英文名，`mongodb`中创建的集合名称。在每个`database`内唯一。  | 是   |
-| title       | 中文名                                                       | 否   |
-| description | 说明                                                         | 否   |
-| schema_id   | 集合中文档对应的扩展字段定义 id。                            | 否   |
-| tags        |                                                              | 否   |
-| default_tag |                                                              | 否   |
-| usage       | 集合用途，`0`或**不指定**为普通集合，`1`为复制集合的从集合。 | 否   |
+| 字段        | 说明                                                                  | 必填 |
+| ----------- | --------------------------------------------------------------------- | ---- |
+| \_id        | `mongodb`内部`id`                                                     | 是   |
+| type        | 等于`collection`，不可修改。                                          | 是   |
+| bucket      | 集合所属存储空间                                                      | 否   |
+| database    | 引用数据库对象的`name`字段。（应该去掉，由`db.name`代替）             | 是   |
+| db          |                                                                       |      |
+| db.sysname  | 引用数据库对象的`sysname`字段。                                       |      |
+| db.name     | 引用数据库对象的`name`字段。                                          |      |
+| sysname     | 在`mongodb`中的集合名。系统自动分配，在数据库中唯一。创建后不可修改。 | 是   |
+| name        | 英文名，`mongodb`中创建的集合名称。在每个`database`内唯一。           | 是   |
+| title       | 中文名                                                                | 否   |
+| description | 说明                                                                  | 否   |
+| schema_id   | 集合中文档对应的扩展字段定义 id。                                     | 否   |
+| tags        |                                                                       | 否   |
+| default_tag |                                                                       | 否   |
+| usage       | 集合用途，`0`或**不指定**为普通集合，`1`为复制集合的从集合。          | 否   |
 
 ## 文档列定义（type=schema）
 
