优化集合复制功能

--- a/doc/元数据.md
+++ b/doc/元数据.md
@@ -123,13 +123,12 @@
 
 # 集合复制对应关系（tms_admin/replica_map）
 
-| 字段           | 说明                                         | 类型     | 必填 |
-| -------------- | -------------------------------------------- | -------- | ---- |
-| \_id           | `mongodb`内部`id`                            | ObjectId | 是   |
-| primary        | 主集合，集合属性`usage!=1`。                 | object   | 是   |
-| primary.db     | 主集合数据库名称（mongodb_object.sysname）。 | string   | 是   |
-| primary.cl     | 主集合名称（mongodb_object.name）。          | string   | 是   |
-| secondary      | 从集合，集合属性`usage=1`。                  | object   | 是   |
-| secondary.clId | 从集合（mongodb_object.id）。                | ObjectId | 是   |
-| secondary.db   | 从集合数据库名称（mongodb_object.sysname）。 | string   | 是   |
-| secondary.cl   | 从集合名称（mongodb_object.name）。          | string   | 是   |
+| 字段         | 说明                                         | 类型     | 必填 |
+| ------------ | -------------------------------------------- | -------- | ---- |
+| \_id         | `mongodb`内部`id`                            | ObjectId | 是   |
+| primary      | 主集合，集合属性`usage!=1`。                 | object   | 是   |
+| primary.db   | 主集合数据库名称（mongodb_object.sysname）。 | string   | 是   |
+| primary.cl   | 主集合名称（mongodb_object.sysname）。       | string   | 是   |
+| secondary    | 从集合，集合属性`usage=1`。                  | object   | 是   |
+| secondary.db | 从集合数据库名称（mongodb_object.sysname）。 | string   | 是   |
+| secondary.cl | 从集合名称（mongodb_object.sysname）。       | string   | 是   |
