--- a/doc/复制集合.md
+++ b/doc/复制集合.md
@@ -1,17 +1,16 @@
 # 介绍
 
-实现从集合 A（主集合） 的向集合 B（从集合） 全量和实时复制数据。一个主集合可以向多个从集合复制数据，一个从集合可以从多个主集合接收数据。
+实现从集合 A（主集合） 的向集合 B（从集合） 全量或实时复制数据。一个主集合可以向多个从集合复制数据，一个从集合可以从多个主集合接收数据。
 
-实时复制数据需要使用`ChangeStream`，因此，若需要支持实时复制必须设置`Replica Set`。
+实时复制数据需要使用`ChangeStream`，因此，若需要实时复制必须给`MongoDB`设置`Replica Set`。
 
-从集合和普通集合在使用上并没有严格的区别，也需要定义`schema`。但是，系统会在从集合上自动添加`__pri`字段用于记录对应主集合中的文档信息，其内容如下：
+**从集合**与普通集合在使用上并没有严格的区别，也需要定义`schema`等。但是，系统会在从集合上自动添加`__pri`字段用于记录对应**主集合**中的文档信息，其内容如下：
 
 | 内置字段     | 说明                            | 必填 | 类型      |
 | ------------ | ------------------------------- | ---- | --------- |
 | \_\_pri      |                                 | 是   | object    |
 | \_\_pri.db   | 文档所属数据库名称（sysname）。 | 是   | string    |
-| \_\_pri.clId | 文档所属集合 id。               | 是   | ObjectId  |
-| \_\_pri.cl   | 文档所属集合名称（name）。      | 是   | string    |
+| \_\_pri.cl   | 文档所属集合名称（sysname）。   | 是   | string    |
 | \_\_pri.id   | 文档原始 id（\_id）。           | 是   | ObjectId  |
 | \_\_pri.time | 最近一次复制时间。              | 是   | 13 位整型 |
 
@@ -19,7 +18,7 @@
 
 `tms_admin.replica_map`集合用于记录集合间的复制关系。
 
-自建集合对象（tms_admin.mongodb_object）中的`usage`字段用于指定集合用户，当值为`1`时，说明集合作为从集合使用。
+自建集合对象（tms_admin.mongodb_object）中的`usage`字段用于指定集合用途，当值为`1`时，说明集合作为从集合使用。
 
 管理员用户可以创建**从集合**；管理员用户和普通用户可以查看所有**从集合**。
 
@@ -37,7 +36,7 @@
 
 # 全量复制
 
-管理员用户和普通用户都可以在任意时刻进行由**主集合**到**从集合**的全量复制。进行全量复制前，必须先建立复制关系。
+管理员用户和普通用户都可以在任意时刻进行由**主集合**到**从集合**的全量复制。进行全量复制前，必须先建立集合间的复制关系。
 
 | API                  | 说明                           |
 | -------------------- | ------------------------------ |
