支持将对从集合的操作改为对主集合的操作

--- a/doc/复制集合.md
+++ b/doc/复制集合.md
@@ -18,7 +18,9 @@
 
 ## 在从集合上执行操作
 
-为了简化复制逻辑，主从复制应该是单向的，只能从主集合到从集合。所有对从集合中记录的操作，都要转换为对主集合中相应记录的操作，然后再由主集合复制到从集合。
+因为无法区分**从合集**的更新操作是主集合更新触发的还是用户直接触发的，因此，复制是单向的，只能从主集合到从集合。系统内部将所有对从集合中文档的操作，都要转换为对主集合中相应文档的操作，然后再由主集合复制到从集合。
+
+参加`back/models/mgdb/document.js`中`remove`，`removeMany`，`update`和`updateMany`方法。
 
 是否允许用户在从集合中直接添加文档？目前没有限制。
 
@@ -64,9 +66,10 @@
 
 系统提供如下 API 进行当个复制关系的全量复制：
 
-| API                  | 说明                           |
-| -------------------- | ------------------------------ |
-| /replica/synchronize | 执行主集合到从集合的全量同步。 |
+| API                     | 说明                               |
+| ----------------------- | ---------------------------------- |
+| /replica/synchronize    | 执行主集合到从集合的全量同步。     |
+| /replica/synchronizeAll | 执行全部主集合到从集合的全量同步。 |
 
 `replica/synchronize.js`用于执行所有复制关系的全量复制。
 
