完善文档选择框

--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -18,14 +18,18 @@ module.exports = {
 
 插件必须继承`models/plugin`模块中的`PluginBase`类。
 
-插件必须要包含`name`，`scope`，`title`，`description`信息，建议用`get`方式提供。
+插件必须要包含`name`，`scope`，`title`，`description`信息，建议用`get`方法提供。
 
-| 属性        | 说明         |
-| ----------- | ------------ |
-| name        | 插件名       |
-| scope       | 适用管理对象 |
-| title       | 按钮名称     |
-| description | 描述信息     |
+| 属性            | 说明                                 | 类型   | 必填 |
+| --------------- | ------------------------------------ | ------ | ---- |
+| name            | 插件名                               | string | 是   |
+| scope           | 适用管理对象                         | string | 是   |
+| title           | 按钮名称                             | string | 是   |
+| description     | 描述信息                             | string | 是   |
+| beforeComp      | 调用前执行的前端插件，用于输入条件。 | object | 否   |
+| beforeComp.name | 组件名称。                           | string | 是   |
+| afterComp       | 调用后执行的前端插件，用于显示结果。 | object | 否   |
+| afterComp.name  | 组件名称。                           | string | 是   |
 
 `scope`支持如下取值：
 
@@ -34,6 +38,12 @@ module.exports = {
 | db         | 数据库 |
 | collection | 集合   |
 | document   | 文档   |
+
+`beforeComp.name`支持如下取值：
+
+| 取值          | 说明                                                                                                         |
+| ------------- | ------------------------------------------------------------------------------------------------------------ |
+| DialogDocList | 选择文档作为参数。执行插件前打开一个文档选择对话框，由用户指定数据库和集合，选择多条文档作为参数传递给插件。 |
 
 给插件添加`disabled`属性，并返回`true`，可以禁用插件。
 
