--- a/doc/管理文档间的关联.md
+++ b/doc/管理文档间的关联.md
@@ -9,3 +9,25 @@
 相同的库吗？
 
 schema 上要体现吗？
+
+定义一个描述管理关联关系的集合
+
+如果要建立两个文档关系，选择文档 A，选择文档 B
+
+填入 A 和 B 的哪些字段？
+
+利用插件？
+
+前端预制一些组件，插件可以调用。
+
+选择文档组件
+
+插件告知要使用这个插件获得参数
+
+插件获得两个集合的数据后知道要对做什么处理
+
+选择的文档作为子文档或者兄弟文档？
+
+追踪记录的来源。
+
+AB 两边的状态都要更新，例如：如何知道已经做过关联？
