--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -1,6 +1,6 @@
 # 目的
 
-插件用于扩展系统的功能。系统提供了基础的增删改差操作，但是很多时候需要对数据进行更复杂的处理，例如：对集合中符合 条件的文档中某一列，根据外部接口的查询结果进行填写。这些依赖于特定的业务场景的功能，就需要放在插件中实现。
+插件用于扩展系统的功能。系统提供了基础的增删改查操作，但是很多时候需要对数据进行更复杂的处理，例如：对集合中符合 条件的文档中某一列，根据外部接口的查询结果进行填写。这些依赖于特定的业务场景的功能，就需要放在插件中实现。
 
 每个插件都有确定的适用对象，包括：数据库，集合，文档。和`TMW`的基础功能配合，插件出现在数据库列表，集合列表和文档列表页中，提供给用户使用。
 
@@ -58,7 +58,7 @@
 
 ```js
 module.exports = {
-  dir: 'plugins', // 存放插件的目录，绝对路径，或，启动位置相对路径
+  dir: 'plugins' // 存放插件的目录，绝对路径，或，启动位置相对路径
 }
 ```
 
@@ -179,7 +179,7 @@ class MyPlugin extends PluginHttpSendDocs {
     return 'http://localhost:3000/api/plugins/list?scope=document'
   }
   async execute(ctrl, tmwCl) {
-    return await this.httpSend(ctrl, tmwCl).then((repData) => {
+    return await this.httpSend(ctrl, tmwCl).then(repData => {
       return 'ok'
     })
   }
