--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -77,7 +77,7 @@ module.exports = {
 | title                            | 按钮名称                             | string   | 是   |
 | description                      | 描述信息                             | string   | 是   |
 | disabled                         | 是否停用插件                         | boolean  | 否   |
-| batch                            | 是否支持批量                         | boolean  | 是   |
+| transData                        | 传输数据量                           | string   | 否   |
 | **标签设置**                     |                                      |          |      |
 | excludeTags                      | 管理对象中不允许包含的标签的名称数组 | string[] | 否   |
 | everyTags                        | 管理对象中必须包含所有标签的名称数据 | string[] | 否   |
