整理样式文件

--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -164,6 +164,9 @@ class MyPlugin extends PluginHttpSendDocs {
   get scope() {
     return 'document'
   }
+  get transData() {
+    return 'nothing' //'nothing:无/one:一条/more:多条'
+  }
   get title() {
     return '测试http插件'
   }
