部件支持跨页选数据以及配置schema

--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -99,10 +99,11 @@ module.exports = {
 
 `beforeWidget.name`支持如下取值：
 
-| 取值                 | 说明                                                                                                         |
-| -------------------- | ------------------------------------------------------------------------------------------------------------ |
-| DialogSelectDocument | 选择文档作为参数。执行插件前打开一个文档选择对话框，由用户指定数据库和集合，选择多条文档作为参数传递给插件。 |
-| DialogSchemaForm     | 通用动态表单。                                                                                               |
+| 取值                   | 说明                                                                                                         |
+| ---------------------- | ------------------------------------------------------------------------------------------------------------ |
+| DialogSelectDocument   | 选择文档作为参数。执行插件前打开一个文档选择对话框，由用户指定数据库和集合，选择多条文档作为参数传递给插件。 |
+| DialogSchemaForm       | 通用动态表单。                                                                                               |
+| DialogSelectCollection | 选择数据库和集合。                                                                                           |
 
 `beforeWidget.remoteWidgetOptions`支持如下取值：
 
