完善插件设置

--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -78,6 +78,7 @@ module.exports = {
 | description                      | 描述信息                             | string   | 是   |
 | disabled                         | 是否停用插件                         | boolean  | 否   |
 | transData                        | 传输数据量                           | string   | 否   |
+| visible                          | 是否显示插件                         | object   | 否   |
 | **标签设置**                     |                                      |          |      |
 | excludeTags                      | 管理对象中不允许包含的标签的名称数组 | string[] | 否   |
 | everyTags                        | 管理对象中必须包含所有标签的名称数据 | string[] | 否   |
@@ -168,6 +169,12 @@ class MyPlugin extends PluginHttpSendDocs {
   get transData() {
     return 'nothing' //'nothing:无/one:一条/more:多条'
   }
+  get visible() {
+    return {
+      key: '',
+      value: ''
+    }
+  }
   get title() {
     return '测试http插件'
   }
@@ -197,3 +204,13 @@ function createPlugin(file) {
 
 module.exports = { createPlugin }
 ```
+
+# 使用
+
+`ue_comp/List.vue`
+
+| 属性          | 说明             | 补充                                                        |
+| ------------- | ---------------- | ----------------------------------------------------------- |
+| pluginsAside  | 适用全局右侧插件 | 插件配置 transData:more/nothing 或不进行配置                |
+| pluginsCenter | 适用单条数据     | 插件配置 transData:one；在什么条件下配置，可增配 visible:{} |
+| pluginsSub    | 适用全局顶栏插件 | 由 VUE_APP_PLUGINS_SUB 环境变量控制                         |
