修改环境变量名称

--- a/doc/插件机制2.md
+++ b/doc/插件机制2.md
@@ -213,4 +213,4 @@ module.exports = { createPlugin }
 | ------------- | ---------------- | ----------------------------------------------------------- |
 | pluginsAside  | 适用全局右侧插件 | 插件配置 transData:more/nothing 或不进行配置                |
 | pluginsCenter | 适用单条数据     | 插件配置 transData:one；在什么条件下配置，可增配 visible:{} |
-| pluginsSub    | 适用全局顶栏插件 | 由 VUE_APP_PLUGINS_SUB 环境变量控制                         |
+| pluginsSub    | 适用全局顶栏插件 | 由 VUE_APP_PLUGINSUB_NAMES 环境变量控制                     |
