--- a/doc/复制集合.md
+++ b/doc/复制集合.md
@@ -28,7 +28,7 @@
 
 ## 从集合
 
-自建集合对象（tms_admin.mongodb_object.type==='collection'）中的`usage`字段用于指定集合用途，当值为`1`时，说明集合作为**从集合**使用。
+自建集合对象（tms_admin.mongodb_object.type==='collection'）中的`usage`字段用于指定集合用途，当值为`1`时，说明集合作为**从集合**使用。只允许在管理端进行配置，且一旦确立，不可更改。
 
 复制数据时，系统会在**从集合**上自动添加`__pri`字段用于记录对应**主集合**中的文档信息，其内容如下：
 
@@ -44,13 +44,15 @@
 
 `tms_admin.replica_map`集合用于记录用户指定的集合间复制关系。具体定义参见[元数据](元数据.md#集合复制对应关系（tms_admin/replica_map）)。
 
-管理员用户可以创建**从集合**；管理员用户和普通用户可以查看所有**从集合**。
+管理员用户可以创建**从集合**；
 
-管理员和普通用户可以建立或删除**主集合到从集合的复制关系**。
+管理员用户和普通用户可以查看所有**从集合**以及**从集合**中的数据；
 
-管理员用户可以查看全部集合复制关系。
+管理员和普通用户可以建立或删除**主集合到从集合的复制关系**。管理员用户在管理端的**全量复制定义**标签页下，即可**配置复制关系**，普通用户需在使用端的每个集合的**关联**处，建立当前集合与某个**从集合**的复制关系；
 
-普通用户可以查看一个集合的全部复制关系。
+管理员用户可以查看全部集合复制关系；
+
+普通用户可以查看一个集合的全部复制关系；
 
 系统提供如下 API 管理复制关系：
 
