--- a/doc/白名单.md
+++ b/doc/白名单.md
@@ -1,7 +1,58 @@
-# 白名单配置
-项目中需要为其他项目提供接口，需设置白名单
-在back/config/trusted-hosts.js进行配置,可对manualSetIps可进行手动配置
-参数名为接口方法所在文件的文件名，对应的值应在env设置
+有时需要向其他系统开放一些个 api，这些请求不需要进行登录认证，而是通过设置白名单直接放行。
 
-## 建议env环境变量设置名称遵循以下规范，将自动实现配置
-命名方式应为，以TRUSTIPS_ + 接口对应路径 + '_IPS_' 开头；如要访问mongo/db下的接口，则命名TRUSTIPS_MONGO_DB_IPS_***
+目前在基础应用和实践应用中，设置白名单存在两种方式。
+
+## 基础应用
+
+可参考[系统间调用](https://github.com/jasony62/tms-koa/blob/master/doc/%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6.md#%E7%B3%BB%E7%BB%9F%E9%97%B4%E8%B0%83%E7%94%A8)
+
+## 实践应用
+
+在 `back/config/trusted-hosts.js` 进行配置
+
+```javascript
+let manualSetIps = {},
+  autoSetIps = {}
+const keys = Object.keys(process.env)
+const reg = /^TRUSTIPS_(\w+)_IPS/
+
+keys.forEach((key) => {
+  if (!reg.test(key)) return
+  const str = key.match(reg)[1]
+  let ctrlName = ''
+  str
+    .split('_')
+    .filter((prop) => prop)
+    .forEach((item) => {
+      ctrlName += item.toLowerCase() + '/'
+    })
+  const prop = ctrlName.slice(0, -1)
+  autoSetIps[prop] = JSON.parse(process.env[key])
+})
+
+module.exports = {
+  ...autoSetIps,
+  ...manualSetIps,
+}
+```
+
+既可对 manualSetIps 手动配置，也支持由环境变量传入构成自动化配置 autoSetIps。参数名为接口方法所在文件的文件名，值是一个由 IP 地址组成的数组。
+
+在实践中，一般将需要给外部访问的接口写在 controllers/external 文件夹下。
+
+如要访问 controllers/external/receive.js 文件中的接口(方法)，且只有"192.168.0.0", "192.168.0.1"的 ip 才可访问。
+
+在手动配置情况下，示例如下：
+
+```javascript
+let manualSetIps = {
+  TRUSTIPS_EXTERNAL_RECEIVE_IPS: ["192.168.0.0", "192.168.0.1"]
+},
+
+```
+
+在自动化配置情况下，环境变量命名方式应为：TRUSTIPS\_ + 接口对应路径 + \_IPS，示例如下：
+
+```javascript
+TRUSTIPS_EXTERNAL_RECEIVE_IPS = [''] //若值为[""]则表示任何IP地址都可访问
+```
