--- a/doc/文档对象接口.md
+++ b/doc/文档对象接口.md
@@ -1,21 +1,30 @@
 # 接口清单
 
-| API                                      |      | 说明                           |
-| ---------------------------------------- | ---- | ------------------------------ |
-| **admin**                                |      |                                |
-| /admin/document/list                     | GET  | 指定库中的指定集合下所有的文档 |
-| /admin/document/create                   | POST | 指定库中的指定集合下新建文档   |
-| /admin/document/getGroupByColumnVal      | POST | 根据某一列的值分组             |
-| /admin/document/removeMany               | POST | 批量删除。                     |
-| /admin/document/updateMany               |      | 批量修改数据。                 |
-| /admin/document/getDocCompleteStatusById |      |                                |
-| **mongo**                                |      |                                |
-| /mongo/document/uploadToImport           |      | 上传并导入单个文件             |
-| /mongo/document/export                   |      | 导出数据                       |
-| /mongo/document/move                     |      | 导出数据                       |
-| /mongo/document/getDocsByRule            |      | 根据规则获取数据               |
-| /mongo/document/exportDocsByRule         |      | 导出根据规则获取得数据详情     |
-| /mongo/document/replaceDocsByRule        |      | 根据规则替换数据               |
-| /mongo/document/moveByRule               |      | 根据规则替换数据               |
+| API                                      |          | 说明                           |
+| ---------------------------------------- | -------- | ------------------------------ |
+| **admin**                                |          |                                |
+| /admin/document/list                     | GET/POST | 指定库中的指定集合下所有的文档 |
+| /admin/document/create                   | POST     | 指定库中的指定集合下新建文档   |
+| /admin/document/getGroupByColumnVal      | POST     | 根据某一列的值分组             |
+| /admin/document/removeMany               | POST     | 批量删除。                     |
+| /admin/document/updateMany               |          | 批量修改数据。                 |
+| /admin/document/getDocCompleteStatusById |          |                                |
+| **mongo**                                |          |                                |
+| /admin/document/list                     | GET/POST | 指定库中的指定集合下所有的文档 |
+| /mongo/document/uploadToImport           |          | 上传并导入单个文件             |
+| /mongo/document/export                   |          | 导出数据                       |
+| /mongo/document/move                     |          | 导出数据                       |
+| /mongo/document/getDocsByRule            |          | 根据规则获取数据               |
+| /mongo/document/exportDocsByRule         |          | 导出根据规则获取得数据详情     |
+| /mongo/document/replaceDocsByRule        |          | 根据规则替换数据               |
+| /mongo/document/moveByRule               |          | 根据规则替换数据               |
 
 # 接口说明
+
+```
+curl "http://localhost:4082/api/admin/document/list?db=test2&cl=dialog_script&page=1&size=100"
+```
+
+```
+curl "http://localhost:4082/api/mongo/document/list?db=test2&cl=dialog_script&page=1&size=100"
+```
