--- a/doc/多租户.md
+++ b/doc/多租户.md
@@ -1,22 +1,24 @@
 通过空间（`bucket`）实现多租户模式。
 
-通过将环境变量`TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
+# 服务端（back）
+
+`back`服务通过将环境变量`TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。选项打开后，要求 API 调用必须携带`bucket`查询参数，指定的`bucket`必须已经存在系统中（`tms_admin/bucket`）。如果`bucket`存在，会进一步检查用户是否有访问权限。如果当前用户是`bucket`的创建者，允许访问；如果当前用户是`bucket`的协作者，允许访问。
 
 通过给数据库设置系统名（sysname）解决多个空间（bucket）中数据库命名冲突问题。
 
-通过邀请机制解决空间授权问题。
+使用集合`bucket_invite_log`记录邀请信息。`bucket`的创建者可以创建邀请，邀请包含邀请码、昵称和有效期。有账号的用户通过登录后，接受邀请，加入`bucket`的授权用户列表中。
 
-# 系统端
+# 系统端（ue_system）
 
 进行系统级设置，例如：创建`bucket`时自动创建`database`，`collection`和`schema`。
 
-# 管理端
+# 管理端（ue_admin）
 
-创建并管理`bucket`。
+通过将环境变量`VITE_TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
 
-通过邀请方式允许其他用户访问`bucket`，解决授权问题。
+打开多租户模式后，系统会要求打开的页面链接中包含`bucketName`部分，如果没有就会跳转到`bucket`管理页面。在`bucket`管理界面可以创建、修改、删除`bucket`。
 
-使用集合`bucket_invite_log`记录邀请信息。`bucket`的创建者可以创建邀请，邀请包含邀请码、昵称和有效期。有账号的用户通过登录后，接受邀请，加入`bucket`的授权用户列表中。
+`bucket`的创建者通过邀请方式授权其他用户访问。
 
 # 用户端
 
@@ -25,7 +27,3 @@
 如果用户有唯一的`bucket`，自动选择这个`bucket`进入，否则要求用户从可用列表中选择一个`bucket`。
 
 在编译阶段，过将环境变量`VUE_APP_TMW_REQUIRE_BUCKET`设置为`yes`或`true`打开多租户模式。
-
-# 关闭多租户模式
-
-通过环境变量，关闭多租户模式。
