更新文档对象接口文档

--- a/doc/文档对象接口.md
+++ b/doc/文档对象接口.md
@@ -28,3 +28,152 @@ curl "http://localhost:4082/api/admin/document/list?db=test2&cl=dialog_script&pa
 ```
 curl "http://localhost:4082/api/mongo/document/list?db=test2&cl=dialog_script&page=1&size=100"
 ```
+
+## 获取集合下的文档
+
+> POST /admin/document/list
+
+查询参数
+
+| 参数 | 说明       |
+| ---- | ---------- |
+| db   | 数据库名称 |
+| cl   | 集合名称   |
+| page | 分页       |
+| size | 分页记录数 |
+
+POST 参数
+
+<table>
+    <tr>
+        <th>参数</th>
+        <th>值</th>
+        <th>说明</th>
+    </tr>
+    <tr>
+        <td>filter</td>
+        <td></td>
+        <td>查询条件</td>
+    </tr>
+    <tr>
+        <td rowspan="14">filter.feature</td>
+        <td>start</td>
+        <td>开头是</td>
+    </tr>
+    <tr>
+        <td>notStart</td>
+        <td>开头不是</td>
+    </tr>
+    <tr>
+        <td>end</td>
+        <td>结尾是</td>
+    </tr>
+    <tr>
+        <td>notEnd</td>
+        <td>结尾不是</td>
+    </tr>
+    <tr>
+        <td>notLike</td>
+        <td>不包含指定关键字</td>
+    </tr>
+    <tr>
+        <td>in</td>
+        <td>包含任一指定关键字，关键字为array类型，返回包含关键字的文档</td>
+    </tr>
+    <tr>
+        <td>nin</td>
+        <td>in的取反，返回不包含关键字的文档</td>
+    </tr>
+    <tr>
+        <td>between</td>
+        <td>指定范围内的文档</td>
+    </tr>
+    <tr>
+        <td>eq</td>
+        <td>等于</td>
+    </tr>
+    <tr>
+        <td>ne</td>
+        <td>不等于</td>
+    </tr>
+    <tr>
+        <td>exists</td>
+        <td>判断键值是否存在</td>
+    </tr>
+    <tr>
+        <td>all</td>
+        <td>包含所有指定元素，条件array类型</td>
+    </tr>
+    <tr>
+        <td>elemMatch</td>
+        <td>主要用于内嵌文档的精确查询</td>
+    </tr>
+    <tr>
+        <td>size</td>
+        <td>查找指定数组中，指定长度的文档</td>
+    </tr>
+    <tr>
+        <td rowspan="3">filter.keyword（只针对不传feature情况）</td>
+        <td>string类型</td>
+        <td>正则匹配keyword</td>
+    </tr>
+    <tr>
+        <td>boolean类型</td>
+        <td>指定字段值为true或者false</td>
+    </tr>
+    <tr>
+        <td>number类型</td>
+        <td>指定字段值为数值类型的查询值</td>
+    </tr>
+    <tr>
+        <td>orderBy</td>
+        <td></td>
+        <td>排序条件</td>
+    </tr>
+</table>
+
+POST参数示例
+
+```
+// 查询姓 张 的用户，并根据用户名升序排列。当feature值为notStart，取反。
+{
+    "filter": {"username": {"keyword": "张", "feature": "start"}},
+    "orderBy": {"username": "asc"}
+}
+
+// 查询以 张 结尾的用户名。feature值为notEnd，取反。
+{
+    "filter": {"username": {"keyword": "张", "feature": "end"}}
+}
+
+// 查询city.dependencies节点下的数组中包含石家庄或者广州，或者都包含。当feature，取反
+{
+    "filter": { "city.dependencies": { "feature": "in", "keyword": [{"name":"石家庄"}, {"name":"广州"}] } }
+}
+// 上述，另一写法
+{
+    "filter": { "city.dependencies.name": { "feature": "in", "keyword": ["石家庄","广州"] }
+    }
+}
+
+// 匹配包含name字段的文档，包括字段值为null。当keyword值为false，匹配不包含的文档
+{
+    "filter": {"name": {"keyword": true, "feature": "exists"}}
+}
+
+// 查询city.dependencies节点下的数组中包含所有指定元素（石家庄、郑州）
+{
+    "filter": { "city.dependencies": { "feature": "all", "keyword": [{"name":"石家庄"}, {"name":"郑州"}] } }
+}
+
+// 对city.dependencies节点下数据的精确查询
+{
+    "filter": { "city.dependencies": { "feature": "elemMatch", "keyword": {"name":"石家庄"} } }
+}
+```
+
+返回结果
+
+```
+{"msg":"正常","code":0,"result":{...}}
+```
